# COPYCAT

./: CMakeLists.txt
cmake/: examples.cmake  kanna.cmake  kobayaxi.cmake  toru.cmake
kanna/examples/00-Test/: test.cpp
kanna/examples/common/: ka_utils.cpp  kanna_utils.cpp  kanna_utils.h
kanna/examples/common/entry/: entry.cpp  entry.h
kanna/include/kanna/: defines.h  kanna.h  macros.h
kanna/src/: context.cpp  context.h  kanna.cpp  kanna_private.h
kobayaxi/include/kobayaxi/: kobayaxi.h  macros.h  platform.h
kobayaxi/src/: debug.cpp  debug.h  kobayaxi.cpp  kobayaxi_private.h
